--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				 <li> <p> HOME</p></li>
 
 				 </ul>
-				 <ul class="main-nav">
+				 <ul class="main-nav js--main-nav">
 
 				   <li> <a href="#me">About me</a> </li>
 				   <li> <a href="#personal">Personal Development</a> </li>
@@ -115,7 +115,7 @@
 					</div>
 				</div>
 				<div class="col span-1-of-3"> 
-				<h4 class="column"> Google AI Workshop</h4>
+				<h4 class="columnnn"> Google AI Workshop</h4>
 				<div class="block js--wp-4"> 
 					<div> 
 					<p class="up">
