My very first Website!

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				   <li> <a href="#me">About me</a> </li>
 				   <li> <a href="#personal">Personal Development</a> </li>
 				   <li> <a href="#">Blog</a> </li>
-				   <li> <a href="gallery-index.html">Gallery</a> </li> 
+				   <li> <a href="gallery-index.html" target="_blank">Gallery</a> </li> 
 				   <li> <a href="https://www.linkedin.com/in/minoltandlovu/" target="_blank"><i class="ion-social-linkedin"></i> LINKEDIN </a> </li>	 
 				   <li> <a href="#contacts">Contact Me</a> </li>	 
 
